syntax = "proto3";
package model;
import "options.proto";
option go_package = "./;model";


enum Enum {
    None = 0;
    Something = 1;
    Else = 2;
}


message Model1 {
    option (rony_table) = {
        PartKey: "ID"
        SortKey: "ShardKey"
        SortKey: "Enum"
    };
    option (rony_view) = {
        PartKey: "Enum"
        SortKey: "ShardKey"
        SortKey: "ID"
    };
    int32 ID = 1;
    int32 ShardKey = 2;
    string P1 = 3 [(rony_index) = true];
    repeated string P2 = 4 [(rony_index) = true];
    uint64 P5 = 5;
    Enum Enum = 7;
}

message Model2 {
    option (rony_table) = {
        PartKey: "ID"
        PartKey: "ShardKey"
        SortKey: "-P1"
    };
    option (rony_view) = {
        PartKey: "P1"
        SortKey: "ShardKey"
        SortKey: "ID"
    };
    int64 ID = 1;
    int32 ShardKey = 2;
    string P1 = 3;
    repeated string P2 = 4;
    uint64 P5 = 5;
}

message Model3 {
    option (rony_table) = {
        PartKey: "ID"
        PartKey: "ShardKey"
        SortKey: "-P1"
    };
    option (rony_view) = {
        PartKey: "P1"
        SortKey: "ShardKey"
        SortKey: "ID"
        OrderName: "Shard"
    };
    option (rony_view) = {
        PartKey: "P1"
        SortKey: "ID"
        OrderName: "ID"
    };
    int64 ID = 1;
    int32 ShardKey = 2;
    bytes P1 = 3;
    repeated string P2 = 4;
    repeated bytes P5 = 5 [(rony_index) = true];
}


